# TG_proxy

./: CHANGELOG.md  PLAN.md  README.md  ROADMAP.md  pyproject.toml  run_gui.sh  run_proxy.sh  tg_open_proxy.sh  tg_ws_gui.py  tg_ws_proxy.py
desktop/: tg-proxy.desktop
systemd/: tg-ws-proxy.service
