[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-ws-proxy-linux"
version = "0.3.0"
description = "Local SOCKS5 proxy for Telegram Desktop bridged over WebSocket"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42,<46",
]

[project.scripts]
tg-ws-proxy = "tg_ws_proxy:main"
tg-ws-proxy-gui = "tg_ws_gui:main"
